--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroui/react": "^2.7.8",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
+    "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-query-devtools": "^5.65.1",
     "axios": "^1.7.9",
