--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@heroui/system": "^2.4.15",
-    "@heroui/theme": "^2.4.15",
+    "@heroui/button": "^2.2.24",
+    "@heroui/input": "^2.4.25",
+    "@heroui/navbar": "^2.2.22",
+    "@heroui/popover": "^2.3.24",
+    "@heroui/react": "^2.8.1",
+    "@heroui/spinner": "^2.2.21",
+    "@heroui/system": "^2.4.20",
+    "@heroui/theme": "^2.4.20",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-query-devtools": "^5.65.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
-    "framer-motion": "^12.0.0",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "motion": "^12.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
